--- a/app/src/main/res/layout/delegate_lookup.xml
+++ b/app/src/main/res/layout/delegate_lookup.xml
@@ -12,15 +12,18 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/text_view_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
+            android:textAllCaps="true"
             android:text="Apple Pty Limited"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/text_view_entity_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
@@ -28,6 +31,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/text_view_active_or_inactive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
@@ -37,6 +41,7 @@
 
 
         <TextView
+            android:id="@+id/text_view_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
