--- a/app/src/main/res/layout/delegate_lookup.xml
+++ b/app/src/main/res/layout/delegate_lookup.xml
@@ -16,10 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:textAllCaps="true"
             android:text="Apple Pty Limited"
+            android:textAllCaps="true"
             android:textColor="@android:color/black"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -30,23 +30,55 @@
             android:text="Entity Name (Historic)"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/text_view_active_or_inactive"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="40 399 0393 232 (Active)"
-            android:textColor="@android:color/holo_green_dark"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_identifier_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="40 399 0393 232"
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/text_view_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:padding="2dp"
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/text_view_number"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="NSW 2000"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_view_state_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="NSW"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/text_view_postcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:padding="2dp"
+                android:text="2000"
+                android:textSize="16sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
