--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -5,7 +5,7 @@
             <gradient
                 android:angle="90"
                 android:endColor="#ffffff"
-                    android:startColor="#d3d3d3"
+                    android:startColor="#ffffff"
                 android:type="linear" />
         </shape>
     </item>
