--- a/app/src/main/res/layout/activity_lookup.xml
+++ b/app/src/main/res/layout/activity_lookup.xml
@@ -4,11 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BBDEFB"
     tools:context=".ActivityLookup">
+
+
+    <android.support.v7.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:queryHint="Search..."
+        android:layout_margin="10dp"
+        android:background="@drawable/round_corner_edit_text"
+        android:iconifiedByDefault="false"
+        app:iconifiedByDefault="false" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/search_view"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:dividerHeight="6sp" />
 
 </RelativeLayout>
