--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:endColor="#ffffff"
-                    android:startColor="#ffffff"
+                android:endColor="#00d2ff"
+                    android:startColor="#3498db"
                 android:type="linear" />
         </shape>
     </item>
