--- a/app/src/main/res/layout/delegate_lookup.xml
+++ b/app/src/main/res/layout/delegate_lookup.xml
@@ -8,8 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gradient_background">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
