--- a/app/src/main/res/layout/activity_lookup.xml
+++ b/app/src/main/res/layout/activity_lookup.xml
@@ -8,15 +8,16 @@
     tools:context=".ActivityLookup">
 
 
-    <android.support.v7.widget.SearchView
+    <EditText
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:queryHint="Search..."
         android:layout_margin="10dp"
         android:background="@drawable/round_corner_edit_text"
         android:iconifiedByDefault="false"
-        app:iconifiedByDefault="false" />
+        android:padding="5dp"
+        android:focusable="false"
+        android:drawableLeft="@drawable/ic_search_black_24dp" />
 
     <ListView
         android:id="@+id/list_view"
