--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:endColor="#00d2ff"
+                android:endColor="@color/colorPrimaryDark"
                     android:startColor="#3498db"
                 android:type="linear" />
         </shape>
