--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary" />
-
-        <com.claudiodegio.msv.MaterialSearchView
-            android:id="@+id/search"
-            android:elevation="5dip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.claudiodegio.msv.MaterialSearchView>
-
 
     </FrameLayout>
 
-    <include android:layout_below="@+id/toolbar_container"
+    <include
+        android:layout_below="@+id/toolbar_container"
         layout="@layout/main"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
