--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="text">#FFFFFF</color>
     <color name="light_primary">#B3E5FC</color>
     <color name="secondary_text">#757575</color>
+    <color name="orange_color">#FF9800</color>
 </resources>
