--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,7 +19,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:padding="4dp"
-        android:text="46002510054" />
+        android:text="Nike" />
 
     <Button
         android:id="@+id/button"
