--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/tools"
     android:background="@drawable/gradient_background">
 
     <EditText
@@ -17,24 +18,24 @@
         android:drawableLeft="@android:drawable/ic_menu_search"
         android:drawablePadding="2dp"
         android:ems="10"
+        android:hint="Abn/Acn/Name"
         android:inputType="textPersonName"
-        android:padding="4dp"
-        android:text="Nike" />
+        android:padding="4dp"/>
 
     <Button
         android:id="@+id/button"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:background="@drawable/round_button"
         android:elevation="4dp"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="3dp"
         android:backgroundTintMode="src_in"
         android:layout_marginBottom="5dp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/cardview_dark_background"
         android:text="Go" />
 
     <android.support.v7.widget.CardView
@@ -64,7 +65,7 @@
                     android:padding="10dp"
                     android:text="Select State"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <com.byteshaft.abnlookup.MultiSelectionSpinner
@@ -86,13 +87,14 @@
                 android:weightSum="2">
 
                 <TextView
+                    android:id="@+id/post_code"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="10dp"
                     android:text="Postcode"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -125,7 +127,7 @@
                     android:padding="10dp"
                     android:text="Name Type"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <Spinner
@@ -134,6 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
+                    android:textAlignment="center"
                     android:entries="@array/name_array"
                     android:padding="10dp" />
 
@@ -141,5 +144,17 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544~3347511713">
+    </com.google.android.gms.ads.AdView>
+
 
 </RelativeLayout>
