--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -147,14 +147,16 @@
 
 
     <com.google.android.gms.ads.AdView
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544~3347511713">
-    </com.google.android.gms.ads.AdView>
+        android:layout_centerHorizontal="true"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        tools:ignore="ObsoleteLayoutParam"/>
+
 
 
 </RelativeLayout>
